--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "celery>=5.5.2",
     "fastapi>=0.115.12",
     "llama-index>=0.12.35",
+    "motor>=3.7.0",
+    "pdfplumber>=0.11.6",
+    "pydantic-settings>=2.9.1",
+    "python-multipart>=0.0.20",
+    "redis>=6.1.0",
+    "uvicorn>=0.34.2",
 ]
