--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "llama-index>=0.12.35",
     "motor>=3.7.0",
+    "ollama>=0.4.9",
     "pdfplumber>=0.11.6",
     "pydantic-settings>=2.9.1",
     "python-multipart>=0.0.20",
