--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "celery>=5.5.2",
     "fastapi>=0.115.12",
+    "jose>=1.0.0",
+    "jwt>=1.3.1",
     "llama-index>=0.12.35",
     "motor>=3.7.0",
     "ollama>=0.4.9",
+    "passlib>=1.7.4",
     "pdfplumber>=0.11.6",
     "pydantic-settings>=2.9.1",
     "python-multipart>=0.0.20",
