--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "jose>=1.0.0",
     "jwt>=1.3.1",
     "llama-index>=0.12.35",
+    "llama-index-embeddings-ollama>=0.6.0",
+    "llama-index-llms-ollama>=0.6.2",
     "motor>=3.7.0",
     "ollama>=0.4.9",
     "passlib>=1.7.4",
@@ -19,3 +21,8 @@ dependencies = [
     "redis>=6.1.0",
     "uvicorn>=0.34.2",
 ]
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "B"]
+
+ignore = ["E501"]
